# auto_check_list_bot

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
docs/: API.md  FLOWS.md  README.md  SETUP.md
src/: __init__.py
src/api/: __init__.py  checks.py  health.py
src/auto_check_list_bot/: __init__.py
src/bot/: __init__.py
src/bot/formatting/: __init__.py  markdown.py
src/bot/handlers/: __init__.py  callbacks.py  commands.py
src/bot/keyboards/: __init__.py  check.py
src/models/: __init__.py  dashboards.py
src/services/: __init__.py  bot_access.py  checks_registry.py  config.py  django_client.py  scheduler.py
